2006-01-28  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcelanguage-parser-1.c,
	gtksourceview/gtksourcelanguage-parser-2.c,
	gtksourceview/gtksourcelanguage-private.h,
	gtksourceview/gtksourcelanguage.c: fixes gcc 4.01 compiler warnings on
	different signedness (bug #309663) and make sure that strings
	allocated by libxml are freed using xmlFree()
	* configure.in: do not pass -Wno-pointer-sign to gcc 4

2006-01-28  Marco Barisione  <barisione@gmail.com>

	Merged the changes from HEAD into new_hl_engine

2006-01-25  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcecontextengine.c: (update_syntax): refresh the
	highlighting of the entire batch (bug #326698)

2006-01-25  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcecontextengine.c: (apply_tag): do not pass a
	NULL tag to gtk_text_tag_get_priority()

2006-01-25  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcecontextengine.c: (context_set_last_sibling),
	(context_last), (split_contexts_tree), (join_contexts_tree): the last
	sibling was set before reparenting the contexts

2006-01-22  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcecontextengine.c: (update_syntax),
	(verify_parent), (verify_sequence), (verify_tree): if
	ENABLE_VERIFY_TREE is defined the engine verifies the tree coherency
	* gtksourceview/gtksourcecontextengine.c: (context_last),
	(context_append_child), (join_contexts_tree): call
	context_set_last_sibling() when needed
	* gtksourceview/gtksourcecontextengine.c,
	gtksourceview/gtksourcecontextengine.h: keep the private data in
	GtkSourceContextEngine->priv
	* gtksourceview/gtksourcecontextengine.c:
	(gtk_source_context_engine_attach_buffer), (context_new),
	(container_context_starts_here), (simple_context_starts_here): removed
	end_at argument from context_new() as it is always END_NOT_YET_FOUND

2006-01-19  Marco Barisione  <barisione@gmail.com>
